--- a/treino-app/src/app/components/nav-bar/nav-bar.component.html
+++ b/treino-app/src/app/components/nav-bar/nav-bar.component.html
@@ -4,34 +4,43 @@
             <i class="bi bi-lightning-charge-fill"></i> CapivaPump
         </a>
         
+        <button class="navbar-toggler" type="button" (click)="toggleMenu()">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
         <!-- Auth Pages Navigation -->
-        <div *ngIf="isAuthPage" class="collapse navbar-collapse" id="navbarNav">
+        <div *ngIf="isAuthPage" class="collapse navbar-collapse" [ngClass]="{'show': !isMenuCollapsed}" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/login" routerLinkActive="active">Login</a>
+                    <a class="nav-link" routerLink="/login" routerLinkActive="active" (click)="isMenuCollapsed = true">Login</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/cadastro" routerLinkActive="active">Cadastro</a>
+                    <a class="nav-link" routerLink="/cadastro" routerLinkActive="active" (click)="isMenuCollapsed = true">Cadastro</a>
                 </li>
             </ul>
         </div>
 
         <!-- Main App Navigation -->
-        <div *ngIf="!isAuthPage" class="collapse navbar-collapse" id="navbarNav">
+        <div *ngIf="!isAuthPage" class="collapse navbar-collapse" [ngClass]="{'show': !isMenuCollapsed}" id="navbarNav">
             <ul class="navbar-nav me-auto">
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/home" routerLinkActive="active">
+                    <a class="nav-link" routerLink="/home" routerLinkActive="active" (click)="isMenuCollapsed = true">
                         <i class="bi bi-house-fill"></i> Home
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/perfil" routerLinkActive="active">
+                    <a class="nav-link" routerLink="/perfil" routerLinkActive="active" (click)="isMenuCollapsed = true">
                         <i class="bi bi-person-fill"></i> Perfil
+                    </a>
+                </li>
+                <li class="nav-item d-lg-none">
+                    <a class="nav-link" (click)="logout()" style="cursor: pointer;">
+                        <i class="bi bi-box-arrow-right"></i> Sair
                     </a>
                 </li>
             </ul>
             
-            <button class="btn btn-light" (click)="logout()">
+            <button class="btn btn-light d-none d-lg-block" (click)="logout()">
                 <i class="bi bi-box-arrow-right"></i> Sair
             </button>
         </div>
